--- a/7-Conclusao/capitulo_conclusao.tex
+++ b/7-Conclusao/capitulo_conclusao.tex
@@ -29,7 +29,7 @@ Para ambientes transacionais cuja modelagem ainda segue os padrões de normaliza
 
 De maneira geral, a pesquisa corroborou a teoria de que SGBDR atuam melhor sob operações transacionais, e que mesmo em ambiente analítico a modelagem mais normalizada é ideal para esta classe de SGBD. Por não precisarem do mesmo desempenho para recuperação de informações como consultas analíticas, eles podem se ater a consistência de dados e a uma modelagem normalizada, optando por deixar de lado o particionamento horizontal dos dados, mesmo que isso degrade a disponibilidade destes ao ocorrer uma queda de servidor.
 
-Para ambientes analíticos, reforça-se que um SGBDC é uma ótima escolha na recuperação de dados. Todos seus atributos estarão armazenados juntos, as chances de conseguir uma alta compressão são maiores e a reconstrução de tuplas, dependendo de qual for sua implementação, é feita de forma mais inteligente que em SGBDR. Por serem uma classe de SGBD NoSQL, garantem alta disponibilidade e são capazes de realizar particionamento horizontal, por isso o desempenho é melhor em modelagens denormalizadas, aumentando a eficiência na recuperação de dados em um DW.
+Para ambientes analíticos, reforça-se que um SGBDC é uma ótima escolha na recuperação de dados. Todos seus atributos estarão armazenados juntos, as chances de conseguir uma alta compressão são maiores e a reconstrução de tuplas, dependendo de qual for sua implementação, é feita de forma mais inteligente que em SGBDR. Por serem uma classe de SGBD NoSQL, garantem alta disponibilidade e são capazes de realizar particionamento horizontal, por isso o desempenho é melhor em modelagens denormalizadas, aumentando a eficiência na recuperação de dados em um DW. Porém, deve atentar-se ao fato de que o tamanho da base de dados pode influenciar no desempenho final, visto que os resultados entre as modelagens no MonetDB não foram tão discrepantes entre si pois a diferença do tempo total das consultas foi pequena.
 
 % \section{Trabalhos Futuros}
 
@@ -39,6 +39,8 @@ Como continuidade para a pesquisa sugere-se:
     \item Realizar um estudo mais aprofundado sobre escalabilidade horizontal em bancos NoSQL, e se possível aplicar o \textit{benchmark} considerando um cenário utilizando um único servidor para processamento de consultas e outro com vários servidores, a fim de simular problemas que teoricamente são solucionados pelo particionamento horizontal, como queda, ou falha, e distribuição de dados.
 
     \item Utilizar bases de dados maiores, a partir de 100GB, para que se possa também comparar os resultados com os contidos na página oficial do TPC-H.
+
+    \item Denormalizar o modelo \textit{star} em um nível maior, considerando utilizar somente uma tabela fato, visto que muitas empresas utilizam esse modelo.
 
     \item Aplicar os resultados encontrados nesta pesquisa em empresas que ainda utilizem bancos relacionais ou, mesmo que usem outras alternativas, que ainda tenham uma modelagem normalizada, realizando a migração tanto do SGBD quanto da modelagem para um modelo colunar denormalizado.
 
