--- a/Referencias.bib
+++ b/Referencias.bib
@@ -476,10 +476,12 @@ month={Oct},}
   publisher={ACM}
 }
 
-@article{soares2012avaliaccao,
+@mastersthesis{soares2012avaliaccao,
   title={Uma Avaliação Experimental de Desempenho entre Sistemas Gerenciadores de Bancos de Dados Colunares e Relacionais},
   author={Soares, Bruno Eduardo},
-  year={2012}
+  school = {Universidade Estadual do Oeste do Paraná},
+  year={2012},
+  type = {Monografia}
 }
 
 % ---------------------- SGBDS NOSQL
@@ -547,6 +549,12 @@ month={Oct},}
 	note = {Acessado em: 20 de agosto de 2017}
 }
 
+@misc{lucid2018column,
+  title = {LucidDB Home Page},
+  year = 2018,
+  url = {http://luciddb.sourceforge.net/},
+  note = {Acessado em: 01 de julho de 2018}
+}
 @MISC{google2018nosql,
 	title = {BigTable - Scalable NoSQL Database Service},
 	year = 2018,
@@ -569,6 +577,20 @@ month={Oct},}
 }
 
 % ------------------------ SGBD RELACIONAIS
+
+@misc{psqlcache2018r, 
+  title = {Understanding caching in Postgres - An in-depth guide},
+  year = 2018,
+  url = {https://madusudanan.com/blog/understanding-postgres-caching-in-depth/},
+  note = {Acessado em: 05 de julho de 2018}
+}
+
+@misc{psql2018conf,
+  title = {Typical changes to postgresql.conf for large database installations},
+  year = 2018,
+  url = {https://goo.gl/iEYUBu},
+  note = {Acessado em: 05 de julho de 2018}
+}
 
 @MISC{postgres2018r,
 	title = {PostgreSQL: The World's Most Advanced Open Source Relational Database},
